# TauriPluginWebsocket

./: Cargo.toml  DEPENDENTS.md  README.md  package.json
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml
Source/: lib.rs
dist-js/: index.d.ts  index.min.js  index.min.js.map  index.mjs  index.mjs.map
examples/tauri-app/: .gitignore  package.json
examples/tauri-app/Source/: main.ts  style.css
examples/tauri-app/src-tauri/: .gitignore  Cargo.toml
examples/tauri-app/src-tauri/Source/: main.rs
guest-js/: index.ts
