[dependencies]
futures-util = "0.3"
http = "1"
log = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["net", "sync"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
edition = { workspace = true }
exclude = ["/examples"]
license-file = { workspace = true }
name = "tauri-plugin-websocket"
rust-version = { workspace = true }
version = "0.0.0"
